--- a/client/index.html
+++ b/client/index.html
@@ -85,12 +85,13 @@
                       <a href="/yurkov-4.pdf" target="_blank"><img src="/yurkov-4.jpg" class="w-10" alt=""></a>
                       <a href="/yurkov-5.pdf" target="_blank"><img src="/yurkov-5.jpg" class="w-10" alt=""></a>
                     </div>
-                    <p class="text-sm text-center mx-10 mb-5">директор МАУ «Центр психолого-педагогической, медицинской
-                      и социальной помощи «Эго»», педагог–психолог высшей категории, психиатр, судебный эксперт
+                    <div class="text-sm text-center mx-10 mb-5"><p class="pt-2 pb-2 font-bold">директор МАУ «Центр психолого-педагогической, медицинской
+                      и социальной помощи «Эго»</p> педагог–психолог высшей категории, психиатр, судебный эксперт
                       психолог (экспертный стаж 9 лет, специализация по вопросам экспертизы несовершеннолетних,
                       детско-родительских отношений, сопровождение несовершеннолетних в уголовном процессе,
                       этические экспертизы), почетный работник общего образования, Заслуженный педагог
-                      Красноярского края.</p>
+                      Красноярского края.
+                    </div>
                   </div>
                 </div>
               <div class="swiper-slide bg-slate-100 dark:bg-slate-900 rounded-md flex flex-col justify-center items-center">
@@ -101,9 +102,8 @@
                     <a href="/yaroshevich-1.pdf" target="_blank"><img src="/yaroshevich-1.jpg" class="w-10" alt=""></a>
                     <a href="/yaroshevich-2.pdf" target="_blank"><img src="/yaroshevich-2.jpg" class="w-10" alt=""></a>
                   </div>
-                  <div class="text-sm text-center mx-10 mb-5">педагог-психолог МАУ «ЦППМиСП «Эго», эксперт АНО ДО ЦППС
-                    «ГЕНЕЗИС». Имею высшее психолого-педагогическое образование, высшую категорию педагога-
-                    психолога, стаж профессиональной деятельности 24 года.
+                  <div class="text-sm text-center mx-10 mb-5"><p class="pt-2 pb-2 font-bold">педагог-психолог МАУ «ЦППМиСП «Эго», эксперт АНО ДО ЦППС
+                    «ГЕНЕЗИС»</p> высшее психолого-педагогическое образование, высшая категорию педагога-психолога, стаж профессиональной деятельности 24 года.
                     <ul class="text-start">Направления деятельности:
                     <li class="list-decimal">Диагностика и коррекция детско-родительских отношений;</li>
                     <li class="list-decimal">Определение уровня актуального
