added meta yandex

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
       name="keywords"
       content="экспертиза, Красноярск, психологи, педагогика, психологическая экспертиза, судебная экспертиза, психологическое сопровождение, генезис, центр"
     />
+
+    <meta name="yandex-verification" content="75a823300fa6c68d" />
     <link rel="icon" type="image/svg+xml" href="/icon-law.svg" />
     <link
       rel="stylesheet"
