--- a/client/index.html
+++ b/client/index.html
@@ -115,7 +115,7 @@
         <div
           class="flex justify-center items-center text-2xl lg:text-4xl text-slate-100"
         >
-          Центр психолого-педагогического сопровождения «Генезис»
+          психолого-педагогического сопровождения «Генезис»
         </div>
       </section>
       <section class="flex flex-col md:flex-row mx-auto px-2 mb-4 pb-2 gap-x-3">
