--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Судебно-психологическая экспертиза Красноярск, психолого-педагогическое сопровождение, заключение на экспертизу"
+      content="Оценка детско-родительских отношений, Психолого-педагогическая экспертиза ребенка при разводе родителей, Комплексная психолого-педагогическая экспертиза несовершеннолетних лиц, Заключение на психолого-педагогическую экспертизу, предоставление психолого-педагогических и социальных услуг обучающимся, испытывающим трудности в освоении основных общеобразовательных программ, развитие и социальная адаптация"
     />
     <meta
       name="keywords"
@@ -30,7 +30,7 @@
       }
     </script>
     <title>
-      Центр психолого-педагогического сопровождения «Генезис» Красноярск
+      «Центр психолого-педагогического сопровождения «Генезис» &#8212; ГЕНЕЗИС
     </title>
   </head>
   <body class="bg-slate-100 dark:bg-slate-900">
