added charter and certificate

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     />
 
     <meta name="yandex-verification" content="75a823300fa6c68d" />
-    <link rel="icon" type="image/svg+xml" href="/icon-law.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/icon-law.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -38,7 +38,7 @@
       <div
         class="container mx-auto flex justify-around md:justify-between items-center max-sm:px-2 py-1"
       >
-        <a href="#"><img src="/genesis-logo.png" class="w-20" alt="" /></a>
+        <a href="#"><img src="img/genesis-logo.png" class="w-20" alt="" /></a>
         <ul
           class="flex justify-between items-center gap-x-10 text-white md:gap-x-12"
         >
@@ -59,7 +59,7 @@
           <div class="ml-4 md:ml-8">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
-                src="/vk-logo.svg"
+                src="img/vk-logo.svg"
                 alt="vk-logo"
                 class="size-6 8 md:size-10"
             /></a>
@@ -154,7 +154,7 @@
                     class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
                   >
                     <img
-                      src="/yurkov-photo.jpg"
+                      src="img/yurkov-photo.jpg"
                       alt="expert photo"
                       class="rounded-md"
                     />
@@ -164,20 +164,20 @@
                       Дмитрий Владимирович Юрков
                     </h3>
                     <div class="flex justify-center items-center gap-x-3">
-                      <a href="/yurkov-1.pdf" target="_blank"
-                        ><img src="/yurkov-1.jpg" class="w-10" alt=""
+                      <a href="img/yurkov-1.pdf" target="_blank"
+                        ><img src="img/yurkov-1.jpg" class="w-10" alt=""
                       /></a>
-                      <a href="/yurkov-2.pdf" target="_blank"
-                        ><img src="/yurkov-2.jpg" class="w-10" alt=""
+                      <a href="img/yurkov-2.pdf" target="_blank"
+                        ><img src="img/yurkov-2.jpg" class="w-10" alt=""
                       /></a>
-                      <a href="/yurkov-3.pdf" target="_blank"
-                        ><img src="/yurkov-3.jpg" class="w-10" alt=""
+                      <a href="img/yurkov-3.pdf" target="_blank"
+                        ><img src="img/yurkov-3.jpg" class="w-10" alt=""
                       /></a>
-                      <a href="/yurkov-4.pdf" target="_blank"
-                        ><img src="/yurkov-4.jpg" class="w-10" alt=""
+                      <a href="img/yurkov-4.pdf" target="_blank"
+                        ><img src="img/yurkov-4.jpg" class="w-10" alt=""
                       /></a>
-                      <a href="/yurkov-5.pdf" target="_blank"
-                        ><img src="/yurkov-5.jpg" class="w-10" alt=""
+                      <a href="img/yurkov-5.pdf" target="_blank"
+                        ><img src="img/yurkov-5.jpg" class="w-10" alt=""
                       /></a>
                     </div>
                     <div class="text-sm text-center mx-10 mb-5">
@@ -202,7 +202,7 @@
                     class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
                   >
                     <img
-                      src="/yaroshevich-photo.jpg"
+                      src="img/yaroshevich-photo.jpg"
                       alt="expert photo"
                       class="rounded-md"
                     />
@@ -212,11 +212,11 @@
                       Ярошевич Лариса Петровна
                     </h3>
                     <div class="flex justify-center items-center gap-x-3">
-                      <a href="/yaroshevich-1.pdf" target="_blank"
-                        ><img src="/yaroshevich-1.jpg" class="w-10" alt=""
+                      <a href="img/yaroshevich-1.pdf" target="_blank"
+                        ><img src="img/yaroshevich-1.jpg" class="w-10" alt=""
                       /></a>
-                      <a href="/yaroshevich-2.pdf" target="_blank"
-                        ><img src="/yaroshevich-2.jpg" class="w-10" alt=""
+                      <a href="img/yaroshevich-2.pdf" target="_blank"
+                        ><img src="img/yaroshevich-2.jpg" class="w-10" alt=""
                       /></a>
                     </div>
                     <div class="text-sm text-center mx-10 mb-5">
@@ -299,7 +299,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="/edu-help-1.jpg"
+                  src="img/edu-help-1.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -315,7 +315,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="/edu-help-2.jpg"
+                  src="img/edu-help-2.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -331,7 +331,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="/edu-help-3.jpg"
+                  src="img/edu-help-3.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -345,6 +345,18 @@
               </p>
             </div>
           </div>
+        </div>
+        <h2 class="text-center mt-5 mb-5">Учредительные документы</h2>
+        <div class="flex justify-center items-center gap-x-12 mb-5">
+          <a href="img/certificate.jpeg" target="_blank"
+            ><img
+              src="img/certificate.jpeg"
+              alt="certificate"
+              class="w-[160px]"
+          /></a>
+          <a href="img/charter.pdf" target="_blank"
+            ><img src="img/charter.jpg" alt="charter" class="w-[160px]"
+          /></a>
         </div>
       </section>
       <section class="px-2 mb-4 pb-2">
@@ -442,7 +454,7 @@
             <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
-            ><img src="public/vk-logo.svg" alt="vk-logo" class="size-8"
+            ><img src="img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
