--- a/client/index.html
+++ b/client/index.html
@@ -342,19 +342,19 @@
                     Дмитрий Владимирович Юрков
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
-                    <a href="img/yurkov-1.pdf" target="_blank"
+                    <a href="/yurkov-1.pdf" target="_blank"
                       ><img src="img/yurkov-1.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="img/yurkov-2.pdf" target="_blank"
+                    <a href="/yurkov-2.pdf" target="_blank"
                       ><img src="img/yurkov-2.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="img/yurkov-3.pdf" target="_blank"
+                    <a href="/yurkov-3.pdf" target="_blank"
                       ><img src="img/yurkov-3.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="img/yurkov-4.pdf" target="_blank"
+                    <a href="/yurkov-4.pdf" target="_blank"
                       ><img src="img/yurkov-4.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="img/yurkov-5.pdf" target="_blank"
+                    <a href="/yurkov-5.pdf" target="_blank"
                       ><img src="img/yurkov-5.jpg" class="w-10" alt=""
                     /></a>
                   </div>
@@ -389,10 +389,10 @@
                     Ярошевич Лариса Петровна
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
-                    <a href="img/yaroshevich-1.pdf" target="_blank"
+                    <a href="/yaroshevich-1.pdf" target="_blank"
                       ><img src="img/yaroshevich-1.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="img/yaroshevich-2.pdf" target="_blank"
+                    <a href="/yaroshevich-2.pdf" target="_blank"
                       ><img src="img/yaroshevich-2.jpg" class="w-10" alt=""
                     /></a>
                   </div>
@@ -572,11 +572,11 @@
         <div class="flex justify-center items-center gap-x-12 mb-5">
           <a href="img/certificate.jpeg" target="_blank"
             ><img
-              src="img/certificate.jpeg"
+              src="/certificate.jpeg"
               alt="certificate"
               class="w-[160px] opacity-75"
           /></a>
-          <a href="img/charter.pdf" target="_blank"
+          <a href="/charter.pdf" target="_blank"
             ><img
               src="img/charter.jpg"
               alt="charter"
