refactored files into assets folder

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     />
 
     <meta name="yandex-verification" content="75a823300fa6c68d" />
-    <link rel="icon" type="image/svg+xml" href="img/icon-law.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/img/icon-law.svg" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -38,7 +38,9 @@
       <div
         class="flex justify-around md:justify-between items-center max-sm:px-2 py-1 md:px-8"
       >
-        <a href="#"><img src="img/genesis-logo.png" class="w-20" alt="" /></a>
+        <a href="#"
+          ><img src="assets/img/genesis-logo.png" class="w-20" alt=""
+        /></a>
         <ul
           class="flex justify-between items-center gap-x-6 text-white md:gap-x-10"
         >
@@ -67,7 +69,7 @@
           <div class="ml-4 md:ml-8">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
-                src="img/vk-logo.svg"
+                src="assets/img/vk-logo.svg"
                 alt="vk-logo"
                 class="size-6 8 md:size-10"
             /></a>
@@ -146,7 +148,7 @@
               <li>- Заключение на психолого-педагогическую экспертизу</li>
             </ul>
             <img
-              src="img/court-expertise.jpg"
+              src="assets/img/court-expertise.jpg"
               alt="court-expertise"
               class="hidden md:block w-1/5 opacity-75 rounded-xl"
             />
@@ -162,7 +164,7 @@
               <h2 class="text-center">Консультирование</h2>
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="img/consultation.jpg"
+                  src="assets/img/consultation.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="consultations"
                 />
@@ -223,7 +225,7 @@
                 class="flex justify-center items-center pt-5 pb-5 backdrop-opacity-10"
               >
                 <img
-                  src="img/diagnostics.jpg"
+                  src="assets/img/diagnostics.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="diagnostics"
                 />
@@ -268,7 +270,7 @@
               <h2>Коррекция</h2>
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="img/correction.jpg"
+                  src="assets/img/correction.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="correction"
                 />
@@ -332,7 +334,7 @@
                   class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="img/yurkov-photo.jpg"
+                    src="assets/img/yurkov-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -342,20 +344,20 @@
                     Дмитрий Владимирович Юрков
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
-                    <a href="/yurkov-1.pdf" target="_blank"
-                      ><img src="img/yurkov-1.jpg" class="w-10" alt=""
+                    <a href="/docs/yurkov-1.pdf" target="_blank"
+                      ><img src="assets/img/yurkov-1.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="/yurkov-2.pdf" target="_blank"
-                      ><img src="img/yurkov-2.jpg" class="w-10" alt=""
+                    <a href="/docs/yurkov-2.pdf" target="_blank"
+                      ><img src="assets/img/yurkov-2.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="/yurkov-3.pdf" target="_blank"
-                      ><img src="img/yurkov-3.jpg" class="w-10" alt=""
+                    <a href="/docs/yurkov-3.pdf" target="_blank"
+                      ><img src="assets/img/yurkov-3.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="/yurkov-4.pdf" target="_blank"
-                      ><img src="img/yurkov-4.jpg" class="w-10" alt=""
+                    <a href="/docs/yurkov-4.pdf" target="_blank"
+                      ><img src="assets/img/yurkov-4.jpg" class="w-10" alt=""
                     /></a>
-                    <a href="/yurkov-5.pdf" target="_blank"
-                      ><img src="img/yurkov-5.jpg" class="w-10" alt=""
+                    <a href="/docs/yurkov-5.pdf" target="_blank"
+                      ><img src="assets/img/yurkov-5.jpg" class="w-10" alt=""
                     /></a>
                   </div>
                   <div class="text-sm text-center mx-10 mb-5">
@@ -379,7 +381,7 @@
                   class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="img/yaroshevich-photo.jpg"
+                    src="assets/img/yaroshevich-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -389,11 +391,17 @@
                     Ярошевич Лариса Петровна
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
-                    <a href="/yaroshevich-1.pdf" target="_blank"
-                      ><img src="img/yaroshevich-1.jpg" class="w-10" alt=""
+                    <a href="/docs/yaroshevich-1.pdf" target="_blank"
+                      ><img
+                        src="assets/img/yaroshevich-1.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
-                    <a href="/yaroshevich-2.pdf" target="_blank"
-                      ><img src="img/yaroshevich-2.jpg" class="w-10" alt=""
+                    <a href="/docs/yaroshevich-2.pdf" target="_blank"
+                      ><img
+                        src="assets/img/yaroshevich-2.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                   </div>
                   <div class="text-sm text-center mx-10 mb-5">
@@ -428,7 +436,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="img/kutsonets.png"
+                    src="assets/img/kutsonets.png"
                     alt="expert photo"
                     class="rounded-md h-full"
                   />
@@ -521,7 +529,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="img/edu-help-1.jpg"
+                  src="assets/img/edu-help-1.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -537,7 +545,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="img/edu-help-2.jpg"
+                  src="assets/img/edu-help-2.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -553,7 +561,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="img/edu-help-3.jpg"
+                  src="assets/img/edu-help-3.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -570,15 +578,15 @@
         </div>
         <h2 class="text-center mt-5 mb-5">Учредительные документы</h2>
         <div class="flex justify-center items-center gap-x-12 mb-5">
-          <a href="img/certificate.jpeg" target="_blank"
+          <a href="assets/img/certificate.jpeg" target="_blank"
             ><img
-              src="/certificate.jpeg"
+              src="/docs/certificate.jpeg"
               alt="certificate"
               class="w-[160px] opacity-75"
           /></a>
-          <a href="/charter.pdf" target="_blank"
+          <a href="/docs/charter.pdf" target="_blank"
             ><img
-              src="img/charter.jpg"
+              src="assets/img/charter.jpg"
               alt="charter"
               class="w-[160px] opacity-75"
           /></a>
@@ -679,12 +687,12 @@
             <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
-            ><img src="img/vk-logo.svg" alt="vk-logo" class="size-8"
+            ><img src="assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
     </footer>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       const lightSwitches = document.querySelectorAll(".light-switch");
