--- a/client/index.html
+++ b/client/index.html
@@ -34,47 +34,54 @@
     </title>
   </head>
   <body class="bg-slate-100 dark:bg-slate-900">
-    <header class="bg-slate-900 sticky top-0 z-10 border-b border-slate-300">
+    <header
+      class="bg-slate-900 sticky top-0 z-10 border-b border-slate-300 md:text-sm lg:text-base"
+    >
       <div
-        class="flex justify-around md:justify-between items-center max-sm:px-2 py-1 md:px-8"
+        class="flex justify-around lg:justify-between items-center max-md:px-2 py-1 lg:px-8"
       >
         <a href="#"
           ><img src="assets/img/genesis-logo.png" class="w-20" alt=""
         /></a>
         <ul
-          class="flex justify-between items-center gap-x-6 text-white md:gap-x-10"
+          class="flex justify-between items-center gap-x-6 text-white lg:gap-x-10"
         >
           <li class="hidden md:flex">
-            <a href="#court-expertise" class="text-center"
+            <a href="#court-expertise" class="hidden lg:block text-center"
               >Судебно-психологическая<br />
               экспертиза</a
+            >
+            <a
+              href="#court-expertise"
+              class="sm:hidden md:block lg:hidden text-center"
+              >Экспертиза</a
             >
           </li>
           <li class="hidden md:flex">
             <a href="#services">Услуги</a>
           </li>
-          <li class="hidden md:flex md:ml-6">
+          <li class="hidden md:flex lg:ml-6">
             <a href="#team">Специалисты</a>
           </li>
-          <li class="hidden md:flex md:ml-6"><a href="#about">О нас</a></li>
-          <li class="hidden md:flex md:ml-6">
+          <li class="hidden md:flex lg:ml-6"><a href="#about">О нас</a></li>
+          <li class="hidden md:flex lg:ml-6">
             <a href="#contacts">Контакты</a>
           </li>
         </ul>
         <div class="flex items-center">
-          <div class="flex flex-col md:ml-8">
+          <div class="flex flex-col lg:ml-8">
             <a href="tel:+79029272400">+7 902 927-24-00 </a>
             <a href="tel:+79831992391">+7 983 199-23-91 </a>
           </div>
-          <div class="ml-4 md:ml-8">
+          <div class="ml-4 lg:ml-8">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
                 src="assets/img/vk-logo.svg"
                 alt="vk-logo"
-                class="size-6 8 md:size-10"
+                class="size-6 md:size-10"
             /></a>
           </div>
-          <div class="flex flex-col justify-center ml-2 md:ml-10">
+          <div class="flex flex-col justify-center ml-2 lg:ml-10">
             <input
               type="checkbox"
               name="light-switch"
@@ -120,7 +127,7 @@
     </header>
     <main>
       <section
-        class="hidden md:flex md:size-full md:h-72 md:bg-cover md:bg-banner-pattern justify-center p-20 mb-4"
+        class="hidden lg:flex md:size-full md:h-72 md:bg-cover md:bg-banner-pattern justify-center p-20 mb-4"
       >
         <div
           class="flex justify-center items-center text-2xl lg:text-4xl text-slate-100"
@@ -132,9 +139,11 @@
         <div class="w-full">
           <a id="court-expertise" class="scroll-mt-28"></a>
           <h1>Основные направления судебно-психологической экспертизы:</h1>
-          <div class="flex justify-evenly gap-x-12 pt-5 pb-5">
+          <div
+            class="flex justify-around md:gap-x-4 md:px-6 lg:gap-x-12 pt-5 pb-5"
+          >
             <ul
-              class="flex flex-col gap-y-8 sm:text-base md:text-xl font-bold mb-5"
+              class="flex flex-col lg:gap-y-8 sm:text-base md:text-xl font-bold mb-5"
             >
               <li>- Оценка детско-родительских отношений</li>
               <li>
@@ -150,7 +159,7 @@
             <img
               src="assets/img/court-expertise.jpg"
               alt="court-expertise"
-              class="hidden md:block w-1/5 opacity-75 rounded-xl"
+              class="hidden md:block md:w-3/12 lg:block w-1/5 opacity-75 rounded-xl"
             />
           </div>
         </div>
@@ -159,7 +168,7 @@
         <div class="w-full dark:bg-slate-800 bg-slate-300 text-slate-600">
           <a id="services" class="scroll-mt-28"></a>
           <h1>Наши направления деятельности:</h1>
-          <div class="grid grid-cols-12 mx-auto px-10 gap-x-12">
+          <div class="lg:grid grid-cols-12 mx-auto px-10 gap-x-12">
             <div class="col-span-4">
               <h2 class="text-center">Консультирование</h2>
               <div class="flex justify-center items-center pt-5 pb-5">
@@ -170,7 +179,7 @@
                 />
               </div>
               <div class="container swiper text-center">
-                <div class="h-60 slide-consult-container overflow-hidden">
+                <div class="slide-consult-container overflow-hidden">
                   <div class="swiper-wrapper pb-5">
                     <div class="swiper-slide px-2">
                       <ul>
@@ -207,14 +216,6 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  id="button-next-consult"
-                  class="swiper-navBtn swiper-button-next"
-                ></div>
-                <div
-                  id="button-prev-consult"
-                  class="swiper-navBtn swiper-button-prev"
-                ></div>
                 <div id="pagination-consult" class="swiper-pagination"></div>
               </div>
             </div>
@@ -232,7 +233,7 @@
               </div>
               <div>
                 <div class="container swiper text-center">
-                  <div class="h-60 slide-diagnostics-container overflow-hidden">
+                  <div class="slide-diagnostics-container overflow-hidden">
                     <div class="swiper-wrapper pb-5">
                       <div class="swiper-slide px-2">
                         <p>
@@ -252,14 +253,6 @@
                     </div>
                   </div>
                   <div
-                    id="button-next-diagnostics"
-                    class="swiper-navBtn swiper-button-next"
-                  ></div>
-                  <div
-                    id="button-prev-diagnostics"
-                    class="swiper-navBtn swiper-button-prev"
-                  ></div>
-                  <div
                     id="pagination-diagnostics"
                     class="swiper-pagination"
                   ></div>
@@ -277,7 +270,7 @@
               </div>
               <div>
                 <div class="container swiper">
-                  <div class="h-60 slide-correction-container overflow-hidden">
+                  <div class="slide-correction-container overflow-hidden">
                     <div class="swiper-wrapper pb-5">
                       <div class="swiper-slide px-2">
                         <p>
@@ -302,14 +295,6 @@
                     </div>
                   </div>
                   <div
-                    id="button-next-correction"
-                    class="swiper-navBtn swiper-button-next"
-                  ></div>
-                  <div
-                    id="button-prev-correction"
-                    class="swiper-navBtn swiper-button-prev"
-                  ></div>
-                  <div
                     id="pagination-correction"
                     class="swiper-pagination"
                   ></div>
@@ -325,7 +310,7 @@
         <div
           class="container swiper mt-5 mb-5 flex justify-center items-center"
         >
-          <div class="slide-container overflow-hidden" style="width: 80%">
+          <div class="slide-container overflow-hidden">
             <div class="swiper-wrapper pb-5">
               <div
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
@@ -360,17 +345,35 @@
                       ><img src="assets/img/yurkov-5.jpg" class="w-10" alt=""
                     /></a>
                   </div>
-                  <div class="text-sm text-center mx-10 mb-5">
+                  <div
+                    class="flex flex-col justify-center items-center text-center text-sm mx-10 mb-5"
+                  >
                     <p class="pt-2 pb-2 font-bold">
                       директор МАУ «Центр психолого-педагогической, медицинской
                       и социальной помощи «Эго»
                     </p>
+                    <!--                    <div id="button-more" class="pt-3">-->
+                    <!--                      <p-->
+                    <!--                        class="border-t-2 border-slate-800 dark:border-slate-100 font-bold"-->
+                    <!--                      >-->
+                    <!--                        Узнать больше-->
+                    <!--                      </p>-->
+                    <!--                    </div>-->
+                    <!--                    <p id="more" style="display: none">-->
                     педагог–психолог высшей категории, психиатр, судебный
                     эксперт психолог (экспертный стаж 9 лет, специализация по
                     вопросам экспертизы несовершеннолетних, детско-родительских
                     отношений, сопровождение несовершеннолетних в уголовном
                     процессе, этические экспертизы), почетный работник общего
                     образования, Заслуженный педагог Красноярского края.
+                    <!--                    </p>-->
+                    <!--                    <div id="button-less" style="display: none" class="pt-3">-->
+                    <!--                      <p-->
+                    <!--                        class="border-t-2 border-slate-800 dark:border-slate-100 font-bold"-->
+                    <!--                      >-->
+                    <!--                        Свернуть-->
+                    <!--                      </p>-->
+                    <!--                    </div>-->
                   </div>
                 </div>
               </div>
@@ -409,23 +412,47 @@
                       педагог-психолог МАУ «ЦППМиСП «Эго», эксперт АНО ДО ЦППС
                       «ГЕНЕЗИС»
                     </p>
-                    высшее психолого-педагогическое образование, высшая
-                    категорию педагога-психолога, стаж профессиональной
-                    деятельности 24 года.
-                    <ul class="text-start">
-                      Направления деятельности:
-                      <li class="list-decimal">
-                        Диагностика и коррекция детско-родительских отношений;
-                      </li>
-                      <li class="list-decimal">
-                        Определение уровня актуального развития детей от 0 до 18
-                        лет;
-                      </li>
-                      <li class="list-decimal">
-                        Оценка детско-родительских отношений при проведении
-                        судебных и досудебных психологических экспертиз.
-                      </li>
-                    </ul>
+                    <!--                    высшее психолого-педагогическое образование, высшая-->
+                    <!--                    категорию педагога-психолога, стаж профессиональной-->
+                    <!--                    деятельности 24 года.-->
+                    <!--                    <ul class="text-start">-->
+                    <!--                      Направления деятельности:-->
+                    <!--                      <li class="list-decimal">-->
+                    <!--                        Диагностика и коррекция детско-родительских отношений;-->
+                    <!--                      </li>-->
+                    <!--                      <li class="list-decimal">-->
+                    <!--                        Определение уровня актуального развития детей от 0 до 18-->
+                    <!--                        лет;-->
+                    <!--                      </li>-->
+                    <!--                      <li class="list-decimal">-->
+                    <!--                        Оценка детско-родительских отношений при проведении-->
+                    <!--                        судебных и досудебных психологических экспертиз.-->
+                    <!--                      </li>-->
+                    <!--                    </ul>-->
+
+                    <div id="button-more" class="pt-3">
+                      <p
+                        class="border-t-2 border-slate-800 dark:border-slate-100 font-bold"
+                      >
+                        Узнать больше
+                      </p>
+                    </div>
+                    <p id="more" style="display: none">
+                      педагог–психолог высшей категории, психиатр, судебный
+                      эксперт психолог (экспертный стаж 9 лет, специализация по
+                      вопросам экспертизы несовершеннолетних,
+                      детско-родительских отношений, сопровождение
+                      несовершеннолетних в уголовном процессе, этические
+                      экспертизы), почетный работник общего образования,
+                      Заслуженный педагог Красноярского края.
+                    </p>
+                    <div id="button-less" style="display: none" class="pt-3">
+                      <p
+                        class="border-t-2 border-slate-800 dark:border-slate-100 font-bold"
+                      >
+                        Свернуть
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -492,40 +519,15 @@
         <h2 class="text-center">
           Автономная некоммерческая организация дополнительного образования
         </h2>
-        <div class="container mx-auto sm:flex pt-5 md:hidden">
-          <p class="pb-2">
-            Центр &quot;Генезис&quot; организован 4 октября 2022 года. Обучение
-            и воспитание в центре ведутся на русском языке.
-          </p>
-          <ul class="pb-2">
-            Цели деятельности организации:
-            <li class="list-disc md:mt-2 mb-2">
-              предоставление психолого-педагогических и социальных услуг
-              обучающимся, испытывающим трудности в освоении основных
-              общеобразовательных программ, развитие и социальная адаптация;
-            </li>
-            <li class="list-disc md:mt-2 mb-2">
-              помощь организациям, осуществляющим образовательную деятельность
-              по вопросам реализации основных общеобразовательных программ,
-              осуществление образовательной деятельности;
-            </li>
-            <li class="list-disc md:mt-2 mb-2">
-              предоставление консультационных и просветительских услуг,
-              направленных на формирование высокого профессионального уровня и
-              высокой степени квалификации специалистов-психологов, а также
-              профессиональную ориентацию потенциальных специалистов-психологов.
-            </li>
-          </ul>
-        </div>
-        <div class="hidden md:block container mx-auto pt-5">
+        <div class="container mx-auto pt-5">
           <p class="text-center pb-5">
             Центр &quot;Генезис&quot; организован 4 октября 2022 года. Обучение
             и воспитание в центре ведутся на русском языке.
           </p>
           <p class="text-center pb-4">Цели деятельности организации:</p>
-          <div class="grid grid-cols-12 gap-x-5">
+          <div class="md:grid grid-cols-12 gap-x-5">
             <div
-              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full rounded-xl"
+              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
@@ -541,7 +543,7 @@
               </p>
             </div>
             <div
-              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full rounded-xl"
+              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
@@ -557,7 +559,7 @@
               </p>
             </div>
             <div
-              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full rounded-xl"
+              class="col-span-4 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
@@ -598,20 +600,17 @@
         <div class="sm:grid grid-cols-6 container mx-auto md:hidden">
           <div class="col-span-6">
             <h2>Адрес:</h2>
-            <div>
-              <p>г. Красноярск, улица 60 лет Октября, 102</p>
-              <h2>Телефон:</h2>
-              <h3 class="pt-1.5 pb-1.5">Делопроизводство:</h3>
-              <p>+7(950) 981-54-81 Куницина Екатерина</p>
-              <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
-              <p>+7(902) 927-24-00 Юрков Дмитрий Владимирович</p>
-              <h2 class="p-0">Email:</h2>
-              <p>genesispsykrsk@gmail.com</p>
-              <h2 class="p-0">Директор:</h2>
-              <p>Федотиков Матвей Александрович</p>
-              <p>+7(983) 199-23-91</p>
-              <p>matveyfedotikov@gmail.com</p>
-            </div>
+            <p>г. Красноярск, улица 60 лет Октября, 102</p>
+            <h3 class="pt-1.5 pb-1.5">Делопроизводство:</h3>
+            <p>+7(950) 981-54-81 Куницина Екатерина</p>
+            <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
+            <p>+7(902) 927-24-00 Юрков Дмитрий Владимирович</p>
+            <h2 class="p-0">Email:</h2>
+            <p>genesispsykrsk@gmail.com</p>
+            <h2 class="p-0">Директор:</h2>
+            <p>Федотиков Матвей Александрович</p>
+            <p>+7(983) 199-23-91</p>
+            <p>matveyfedotikov@gmail.com</p>
           </div>
         </div>
 
@@ -620,7 +619,6 @@
             <h2>Адрес:</h2>
             <div>
               <p>г. Красноярск, улица 60 лет Октября, 102</p>
-              <h2 class="p-0">Телефон:</h2>
               <h3 class="pt-1.5 pb-1.5">Делопроизводство:</h3>
               <p>+7(950) 981-54-81</p>
               <p>Куницина Екатерина</p>
@@ -692,32 +690,7 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      const lightSwitches = document.querySelectorAll(".light-switch");
-      if (lightSwitches.length > 0) {
-        lightSwitches.forEach((lightSwitch, i) => {
-          if (localStorage.getItem("dark-mode") === "true") {
-            lightSwitch.checked = true;
-          }
-          lightSwitch.addEventListener("change", () => {
-            const { checked } = lightSwitch;
-            lightSwitches.forEach((el, n) => {
-              if (n !== i) {
-                el.checked = checked;
-              }
-            });
-            if (lightSwitch.checked) {
-              document.documentElement.classList.add("dark");
-              localStorage.setItem("dark-mode", true);
-            } else {
-              document.documentElement.classList.remove("dark");
-              localStorage.setItem("dark-mode", false);
-            }
-          });
-        });
-      }
-    </script>
   </body>
 </html>
