--- a/client/index.html
+++ b/client/index.html
@@ -140,7 +140,7 @@
           <a id="court-expertise" class="scroll-mt-28"></a>
           <h1>Основные направления судебно-психологической экспертизы:</h1>
           <div
-            class="flex justify-around md:gap-x-4 md:px-6 lg:gap-x-12 pt-5 pb-5"
+            class="md:flex justify-around gap-x-4 px-6 lg:gap-x-12 pt-5 pb-5"
           >
             <ul
               class="flex flex-col lg:gap-y-8 sm:text-base md:text-xl font-bold mb-5"
