--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     />
 
     <meta name="yandex-verification" content="75a823300fa6c68d" />
-    <link rel="icon" type="image/svg+xml" href="assets/img/icon-law.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/img/icon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -29,10 +29,48 @@
         document.querySelector("html").classList.remove("dark");
       }
     </script>
+
     <title>
       «Центр психолого-педагогического сопровождения «Генезис» &#8212; ГЕНЕЗИС
     </title>
   </head>
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] =
+        m[i] ||
+        function () {
+          (m[i].a = m[i].a || []).push(arguments);
+        };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) {
+        if (document.scripts[j].src === r) {
+          return;
+        }
+      }
+      (k = e.createElement(t)),
+        (a = e.getElementsByTagName(t)[0]),
+        (k.async = 1),
+        (k.src = r),
+        a.parentNode.insertBefore(k, a);
+    })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(96536967, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true,
+    });
+  </script>
+  <noscript
+    ><div>
+      <img
+        src="https://mc.yandex.ru/watch/96536967"
+        style="position: absolute; left: -9999px"
+        alt=""
+      /></div
+  ></noscript>
+  <!-- /Yandex.Metrika counter -->
   <body class="bg-slate-100 dark:bg-slate-900">
     <header
       class="bg-slate-900 sticky top-0 z-10 border-b border-slate-300 md:text-sm lg:text-base"
