--- a/client/index.html
+++ b/client/index.html
@@ -354,7 +354,7 @@
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
               >
                 <div
-                  class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
                     src="assets/img/yurkov-photo.jpg"
@@ -406,7 +406,51 @@
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
               >
                 <div
-                  class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
+                >
+                  <img
+                    src="assets/img/egle-photo.jpg"
+                    alt="expert photo"
+                    class="rounded-md"
+                  />
+                </div>
+                <div>
+                  <h3 class="font-bold text-center pb-4">
+                    Евгений Сергеевич Эгле
+                  </h3>
+                  <div class="flex justify-center items-center gap-x-3">
+                    <a href="/docs/egle-1.pdf" target="_blank"
+                      ><img src="assets/img/egle-1.jpg" class="w-10" alt=""
+                    /></a>
+                    <a href="/docs/egle-2.pdf" target="_blank"
+                      ><img src="assets/img/egle-2.jpg" class="w-10" alt=""
+                    /></a>
+                    <a href="/docs/egle-3.pdf" target="_blank"
+                      ><img src="assets/img/egle-3.jpg" class="w-10" alt=""
+                    /></a>
+                  </div>
+                  <div
+                    class="text-more flex flex-col justify-center items-center text-center text-sm mx-10 mb-5"
+                  >
+                    <p class="pt-2 pb-2 font-bold">
+                      Руководитель социально-психологической службы МАОУ СШ №
+                      150
+                    </p>
+                    <p>
+                      Педагог-психолог высшей категории, медиатор. Медиация
+                      Детско-родительских отношений; Супружеских споров; При
+                      расторжении брака. Медиация – технология, позволяющая
+                      «услышать» друг друга и сэкономить время и ресурсы. В
+                      конфликте всегда есть выход!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="swiper-slide rounded-md flex flex-col justify-center items-center"
+              >
+                <div
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
                     src="assets/img/yaroshevich-photo.jpg"
@@ -505,7 +549,7 @@
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
               >
                 <div
-                  class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
                     src="assets/img/kunitsina-photo.jpg"
@@ -540,7 +584,7 @@
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
               >
                 <div
-                  class="box-content w-96 h-96 overflow-hidden rounded-md m-2"
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
                     src="assets/img/snyatkova-photo.jpg"
