--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,24 @@
     />
 
     <meta name="yandex-verification" content="75a823300fa6c68d" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:site_name"
+      content="«Центр психолого-педагогического сопровождения «Генезис»"
+    />
+    <meta
+      property="og:title"
+      content="«Центр психолого-педагогического сопровождения «Генезис»"
+    />
+    <meta
+      property="og:description"
+      content="Оценка детско-родительских отношений, Психолого-педагогическая экспертиза ребенка при разводе родителей, Комплексная психолого-педагогическая экспертиза несовершеннолетних лиц, Заключение на психолого-педагогическую экспертизу, предоставление психолого-педагогических и социальных услуг обучающимся, испытывающим трудности в освоении основных общеобразовательных программ, развитие и социальная адаптация"
+    />
+    <meta property="og:url" content="https://genesis-expert.ru" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:image" content="/docs/edu-help-1.jpg" />
+    <meta property="og:image:width" content="968" />
+    <meta property="og:image:height" content="504" />
     <link rel="icon" type="image/svg+xml" href="assets/img/icon.png" />
     <link
       rel="stylesheet"
