--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,10 @@
     />
     <meta property="og:url" content="https://genesis-expert.ru" />
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:image" content="/docs/edu-help-1.jpg" />
+    <meta
+      property="og:image"
+      content="https://genesis-expert.ru/docs/edu-help-1.jpg"
+    />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
     <link rel="icon" type="image/svg+xml" href="assets/img/icon.png" />
