--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,10 @@
       property="og:image"
       content="https://genesis-expert.ru/docs/edu-help-1.jpg"
     />
+    <meta
+      property="vk:image"
+      content="https://genesis-expert.ru/docs/court-expertise.jpg"
+    />
     <link rel="icon" type="image/svg+xml" href="assets/img/icon.png" />
     <link
       rel="stylesheet"
