--- a/client/index.html
+++ b/client/index.html
@@ -711,6 +711,42 @@
                   </div>
                 </div>
               </div>
+              <div
+                class="swiper-slide rounded-md flex flex-col justify-center items-center"
+              >
+                <div
+                  class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
+                >
+                  <img
+                    src="assets/img/maz-photo.jpg"
+                    alt="expert photo"
+                    class="rounded-md"
+                  />
+                </div>
+                <div>
+                  <h3 class="font-bold text-center pb-4">
+                    Зинаида Владимировна Маз
+                  </h3>
+                  <div
+                    class="text-more flex flex-col justify-center items-center text-center text-sm mx-10 mb-5"
+                  >
+                    <p class="pt-2 pb-2 font-bold">
+                      Учитель - логопед высшей кв. категории. Красноярский
+                      педагогический университет имени В.П. Астафьева. Стаж
+                      работы 15 лет. Красноярский педагогический университет
+                      имени В.П. Астафьева. «Медицинский логопед» ВГАПС
+                      Волгоградская гуманитарная академия.
+                    </p>
+                    <p>
+                      Представитель сложной, немаловажной и очень интересной
+                      профессии. Консультации, диагностика речевого развития,
+                      коррекция речи, индивидуальные логопедические занятия,
+                      логопедический массаж, логопедические приемы
+                      восстановления функций жевания и глотания.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div
