game centre page added

--- a/client/index.html
+++ b/client/index.html
@@ -119,13 +119,16 @@
       class="bg-slate-900 sticky top-0 z-10 border-b border-slate-300 md:text-sm lg:text-base"
     >
       <div
-        class="flex justify-around lg:justify-between items-center max-md:px-2 py-1 lg:px-8"
+        class="flex justify-around max-md:px-2 py-1 lg:justify-between px-2 items-center 2xl:justify-around"
       >
         <a href="#"
-          ><img src="assets/img/genesis-logo.png" class="w-20" alt=""
+          ><img
+            src="assets/img/genesis-logo.png"
+            class="w-10 md:w-16 pr-4 2xl:w-20"
+            alt=""
         /></a>
         <ul
-          class="flex justify-between items-center gap-x-6 text-white lg:gap-x-10"
+          class="flex justify-between items-center text-white md:gap-x-4 xl:gap-x-10"
         >
           <li class="hidden md:flex">
             <a href="#court-expertise" class="hidden lg:block text-center"
@@ -138,23 +141,35 @@
               >Экспертиза</a
             >
           </li>
-          <li class="hidden md:flex">
+          <li class="hidden md:flex lg:ml-4">
             <a href="#services">Услуги</a>
           </li>
-          <li class="hidden md:flex lg:ml-6">
+          <li class="hidden md:flex lg:ml-4">
             <a href="#team">Специалисты</a>
           </li>
-          <li class="hidden md:flex lg:ml-6"><a href="#about">О нас</a></li>
-          <li class="hidden md:flex lg:ml-6">
+          <li class="hidden md:flex lg:ml-4"><a href="#about">О нас</a></li>
+          <li class="hidden md:flex lg:ml-4">
             <a href="#contacts">Контакты</a>
           </li>
         </ul>
+        <div class="flex lg:ml-4">
+          <a href="game.html" target="_blank"
+            ><img
+              src="assets/img/game-centre-logo.png"
+              alt="Центр игровой психологической поддержки"
+              class="w-20 md:w-24 lg:w-40"
+          /></a>
+        </div>
         <div class="flex items-center">
-          <div class="flex flex-col lg:ml-8">
-            <a href="tel:+79029272400">+7 902 927-24-00 </a>
-            <a href="tel:+79831992391">+7 983 199-23-91 </a>
+          <div class="flex flex-col lg:ml-6 2xl:ml-10">
+            <a href="tel:+79029272400"
+              ><p class="text-sm md:text-base">+7 902 927-24-00</p></a
+            >
+            <a href="tel:+79831992391"
+              ><p class="text-sm md:text-base">+7 983 199-23-91</p></a
+            >
           </div>
-          <div class="ml-4 lg:ml-8">
+          <div class="ml-4 lg:ml-6 2xl:ml-10">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
                 src="assets/img/vk-logo.svg"
@@ -162,7 +177,7 @@
                 class="size-6 md:size-10"
             /></a>
           </div>
-          <div class="flex flex-col justify-center ml-2 lg:ml-10">
+          <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
             <input
               type="checkbox"
               name="light-switch"
